# data-fabric-connector

./: .gitignore  AGENTS.md  API_CONTRACT.md  Cargo.toml  README.md  dockworker.toml  flake.nix  result
.github/workflows/: ci.yml  oci-build.yml
crates/dfc-aivcs/: Cargo.toml
crates/dfc-aivcs/src/: client.rs  config.rs  lib.rs  review.rs
crates/dfc-core/: Cargo.toml
crates/dfc-core/src/: correlate.rs  error.rs  event.rs  ids.rs  ingest.rs  lib.rs  metrics.rs  replay.rs  tenant.rs
crates/dfc-core/tests/: schema_conformance.rs
crates/dfc-data-fabric/: Cargo.toml
crates/dfc-data-fabric/src/: client.rs  config.rs  http.rs  idempotency.rs  ingest.rs  lib.rs  lineage.rs  retry.rs  review.rs
crates/dfc-hitl/: Cargo.toml
crates/dfc-hitl/src/: bundle.rs  decision.rs  lib.rs
crates/dfc-replay/: Cargo.toml
crates/dfc-replay/src/: audit.rs  bridge.rs  lib.rs
crates/dfc-server/: Cargo.toml
crates/dfc-server/src/: config.rs  main.rs  telemetry.rs  upstream.rs
deploy/: README.md
deploy/base/k8s/: dfc.yaml  healthcheckpolicy.yaml  httproute.yaml
deploy/docker/: Dockerfile
schemas/: correlate-request.schema.json  dfc-event.schema.json  hitl-review-bundle.schema.json  replay-request.schema.json  rollback-request.schema.json
schemas/fixtures/: correlate-request.v1.json  dfc-event.v1.json  hitl-review-bundle.v1.json  replay-request.v1.json  rollback-request.v1.json
tests/contract/: README.md
