[package]
name = "dfc-aivcs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "aivcs-api HTTP client for DFC"

[dependencies]
async-trait = { workspace = true }
dfc-core = { path = "../dfc-core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
