[package]
name = "dfc-data-fabric"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "data-fabric HTTP client for DFC"

[dependencies]
async-trait = { workspace = true }
dfc-core = { path = "../dfc-core" }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
